5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4000/executions/1573_1332.log
== TEST (2019-03-13 14:21:07) 
-- CODE:
aresta = 3/2*(3**0.5)*
area = 5
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 1
    aresta = 3/2*(3**0.5)*
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:21:08) 
-- CODE:
aresta = 3/2*(3**0.5)*
area = 5
 
print(round(area, 4))
-- EXECUTION TIME:
0.144229
-- ERROR:
  File "/home/codebench/codes/1573/1332/main.py", line 1
    aresta = 3/2*(3**0.5)*
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:23:48) 
-- CODE:
aresta = 5
area = 3/2*(3**0.5)*

 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 3/2*(3**0.5)*
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:23:49) 
-- CODE:
aresta = 5
area = 3/2*(3**0.5)*

 
print(round(area, 4))
-- EXECUTION TIME:
0.132868
-- ERROR:
  File "/home/codebench/codes/1573/1332/main.py", line 2
    area = 3/2*(3**0.5)*
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:23:51) 
-- CODE:
aresta = 5
area = 3/2*(3**0.5)*

 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 3/2*(3**0.5)*
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:23:52) 
-- CODE:
aresta = 5
area = 3/2*(3**0.5)*

 
print(round(area, 4))
-- EXECUTION TIME:
0.217754
-- ERROR:
  File "/home/codebench/codes/1573/1332/main.py", line 2
    area = 3/2*(3**0.5)*
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:46:43) 
-- CODE:
aresta = 5
area = 3/2*(3**0.5)*5**2

 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:46:44) 
-- CODE:
aresta = 5
area = 3/2*(3**0.5)*5**2

 
print(round(area, 4))
-- EXECUTION TIME:
0.21205
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
